--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -42,4 +42,8 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  & canvas {
+    image-rendering: optimizeSpeed;
+  }
 }
