changing image-rendering for canvas

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -42,4 +42,7 @@ main {
   justify-content: center;
   align-items: center;
 }
+main canvas {
+  image-rendering: optimizeSpeed;
+}
 /*# sourceMappingURL=app.css.map */
